@@ -19,6 +19,7 @@
   similar to natively created projects (#210)
 - fixes for running on Solaris (#214)
 - xcode2: fixed naming of <dll> targets (Scott Bailey, #218)
+- check for incorrect used of conditional <set> (#220)
 
 
 Version 0.2.3
